cmake_minimum_required(VERSION 3.14)
project(psdd)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_FLAGS "-no-pie")

include_directories(include)
include_directories(/usr/local/include)
link_directories(/usr/local/lib)

if(APPLE)
  link_directories(lib/darwin)
  set(htd "libhtd.0.dylib")
  set(kahypar "libkahypar.dylib")
endif(APPLE)

if(UNIX AND NOT APPLE)
  link_directories(lib/linux)
  set(htd "libhtd.so")
  set(kahypar "libkahypar.so")
endif(UNIX AND NOT APPLE)  

set(gtest_main "libgtest_main.a")
set(gtest "libgtest.a")
set(sdd "libsdd.a")
set(gmock "libgmock.a")
set(gmock_main "libgmock_main.a")


file(GLOB PSDD_TEST_SRC_FILES "test/*.cpp")
file(GLOB LIB_PSDD_SRC_FILES "src/*.h" "src/*.cpp" "src/*.c")
add_executable(psdd_test ${PSDD_TEST_SRC_FILES})
add_library(psdd ${LIB_PSDD_SRC_FILES} )
add_executable(psdd_inference psdd_inference_main.cpp)
add_executable(uai_compiler uai_compiler.cpp)
add_executable(psdd_inference_benchmark psdd_inference_benchmark.cpp)
target_link_libraries(psdd_test psdd ${gtest} ${gtest_main} ${gmock} ${gmock_main} ${sdd} gmp pthread  ${htd} ${kahypar})
target_link_libraries(psdd_inference psdd sdd gmp ${htd} ${kahypar})
target_link_libraries(uai_compiler psdd sdd gmp ${htd} ${kahypar})
target_link_libraries(psdd_inference_benchmark psdd sdd gmp ${htd} ${kahypar})
